--- a/frontend/src/components/Service/Service.scss
+++ b/frontend/src/components/Service/Service.scss
@@ -21,13 +21,13 @@
       background-size: 60px auto;
     }
     &._i1:before {
-      background-image: url(../../svg/icon_cta.svg);
+      background-image: url(../../assets/svg/icon_cta.svg);
     }
     &._i2:before {
-      background-image: url(../../svg/icon_house.svg);
+      background-image: url(../../assets/svg/icon_house.svg);
     }
     &._i3:before {
-      background-image: url(../../svg/icon_achievment.svg);
+      background-image: url(../../assets/svg/icon_achievment.svg);
     }
   }
 }
