--- a/app/src/main/res/layout/fragment_card_of_apartment.xml
+++ b/app/src/main/res/layout/fragment_card_of_apartment.xml
@@ -22,30 +22,32 @@
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginTop="@dimen/normal_margin"
         android:fontFamily="@font/roboto_medium"
+        android:text="415 555 555 руб."
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager2"
-        tools:text="415 555 555 руб." />
+        app:layout_constraintTop_toBottomOf="@+id/viewPager2" />
 
     <TextView
         android:id="@+id/textApartmentAttribute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/normal_margin"
+        android:text="2 - комн. • 60,8 м2 • 10/44 этаж"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textApartmentValue"
-        tools:text="2 - комн. • 60,8 м2 • 10/44 этаж" />
+        app:layout_constraintTop_toBottomOf="@+id/textApartmentValue" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textApartmentAttribute">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/linear_layout_main"
@@ -57,11 +59,9 @@
             <Button
                 android:id="@+id/registration_fragment_reg_btn"
                 style="@style/red_button"
-                android:layout_marginStart="@dimen/normal_margin"
-                android:layout_marginTop="@dimen/big_margin"
-                android:layout_marginEnd="@dimen/normal_margin"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/big_margin"
                 android:text="@string/sing_up_for_viewing" />
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
