--- a/app/src/main/res/layout/layout_inner_in_fragment_card.xml
+++ b/app/src/main/res/layout/layout_inner_in_fragment_card.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
+        app:layout_goneMarginStart="24dp"
         app:layout_constraintStart_toEndOf="@id/image_view_inner"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Мебель в квартире" />
