--- a/frontend/src/components/DCAttachement/DCAttachement.scss
+++ b/frontend/src/components/DCAttachement/DCAttachement.scss
@@ -18,13 +18,13 @@
 		line-height: 16px;
 	}
 
-	input[type=file] {
-		width: 0.1px;
-		height: 0.1px;
-		opacity: 0;
-		position: absolute;
-		z-index: -10;
-	}
+	//input[type=file] {
+	//	width: 0.1px;
+	//	height: 0.1px;
+	//	opacity: 0;
+	//	position: absolute;
+	//	z-index: -10;
+	//}
 
 	input[type=file]:focus + .DC-button {
 		outline: 1px solid #FFFFFF;
