--- a/frontend/src/assets/global.scss
+++ b/frontend/src/assets/global.scss
@@ -129,13 +129,11 @@ strong {
 .button,
 .input {
   width: 100%;
-  max-width: 230px;
   min-height: 36px;
   display: flex;
   justify-content: center;
   border: 1px solid transparent;
   padding: 5px 8px;
-  border-radius: 4px;
   text-align: center;
   font-size: 0.875rem;
   outline: none;
@@ -144,11 +142,13 @@ strong {
 }
 
 .button {
+  max-width: 210px;
   align-items: center;
   font-weight: 500;
   color: $s-text-color;
   background-color: $p-active-color;
   border: 1px solid $p-active-color;
+  border-radius: 4px;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);
   text-transform: uppercase;
   text-decoration: none;
@@ -196,9 +196,9 @@ strong {
 
 .switch {
   display: flex;
-  width: 290px;
+  width: 210px;
   justify-content: space-between;
-  border-radius: 5px;
+  border-radius: 4px;
   background-color: #fff;
   box-sizing: border-box;
   &__label {
@@ -208,12 +208,13 @@ strong {
   }
   &__button {
     width: 100%;
-    max-width: 142px;
+    min-width: 50%;
     min-height: 100%;
     display: flex;
     justify-content: center;
     padding: 5px 8px;
-    border-radius: 5px;
+    border-radius: 4px;
+    border: 2px solid #fff;
     text-align: center;
     font-size:0.875rem;
     outline: none;
@@ -226,6 +227,7 @@ strong {
     text-transform: uppercase;
     text-decoration: none;
     cursor: pointer;
+    box-sizing: border-box;
     &:focus, &:active, &:hover {
       color: $p-active-color;
     }
