--- a/frontend/src/components/TopMenu/TopMenu.scss
+++ b/frontend/src/components/TopMenu/TopMenu.scss
@@ -8,13 +8,21 @@
   right: 0;
   min-height: 69px;
   background-color: #fff;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  box-sizing: border-box;
   &__row {
-    align-items: stretch;
+    position: relative;
+    padding: 0 16px;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
   }
   &__logo-box {
     display: flex;
     align-items: center;
-    padding: 8px 15px;
+    padding: 8px 0;
+    margin-right: 16px;
     height: 69px;
     box-sizing: border-box;
   }
@@ -27,16 +35,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    height: 100%;
     align-items: stretch;
-  }
-  &__link {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    padding: 15px;
-    font-size: 1.125rem;
-    box-sizing: border-box;
   }
   &__space {
     flex-grow: 1;
@@ -47,12 +46,16 @@
   }
   &__icon {
     display: block;
+    position: relative;
     min-width: 25px + 30;
     min-height: 25px + 30;
     border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: auto 25px;
+    &._user {
+      background-image: url(../../assets/svg/user.svg);
+    }
     &._heart {
       background-image: url(../../assets/svg/heart.svg);
     }
@@ -70,16 +73,182 @@
       box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
     }
   }
-  &__button-box {
-    padding: 0 15px;
+  &__checkbox,
+  &__button {
+    display: none;
+  }
+  &__list {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    background-color: #fff;
     box-sizing: border-box;
+  }
+  &__item {
+    height: 100%;
+  }
+  &__link {
+    display: flex;
+    position: relative;
+    min-height: 69px;
+    padding: 10px 16px;
+    align-items: center;
+    box-sizing: border-box;
+    &:after {
+      display: block;
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 16px;
+      right: 16px;
+      border-bottom: 3px solid $p-active-color;
+      opacity: 0;
+      transition: all .7s ease;
+    }
+    &:hover,
+    &:active,
+    &:focus,
+    &._active {
+      &:after {
+        opacity: 1;
+      }
+    }
+  }
+  &__nav {
+    display: flex;
+    flex-wrap: nowrap;
   }
 }
 
 @media (max-width: 991px) {
   .top-menu {
+    &__space {
+      flex-grow: 1;
+    }
+    &__link {
+      min-height: auto;
+    }
+    &__button {
+      display: block;
+      width: 25px + 30;
+      height: 25px + 30;
+      padding: 9px 7px 7px;
+      order: 1;
+      border-radius: 50%;
+      box-sizing: border-box;
+      &._close {
+        position: absolute;
+        z-index: 102;
+        top: 0;
+        right: 0;
+        opacity: 0;
+        transform: translateX(320px);
+        transition: all 0.3s ease-in-out;
+      }
+      &:hover,
+      &:active {
+        cursor: pointer;
+      }
+      &-icon {
+        height: 100%;
+        width: 100%;
+        display: block;
+        vertical-align: middle;
+        position: relative;
+        text-align: left;
+        box-sizing: border-box;
+        &:before,
+        &:after {
+          content: '';
+          width: 24px;
+          height: 3px;
+          position: absolute;
+          right: 8px;
+          transform-origin: right;
+          transition: all 0.3s ease-in-out;
+        }
+        &:before {
+          top: 10px;
+          transform-origin: top right;
+          transform: rotate(0deg);
+          box-shadow: inset 0 0 0 32px, 0 8px;
+        }
+        &:after {
+          top: 26px;
+          transform-origin: bottom right;
+          transform: rotate(0deg);
+          box-shadow: inset 0 0 0 32px;
+        }
+      }
+    }
+    &__checkbox:checked + &__button &__button-icon,
+    &__button._close &__button-icon {
+      &:before {
+        transform: rotate(-45deg);
+        box-shadow: inset 0 0 0 32px, 0 0;
+      }
+      &:after {
+        transform: rotate(45deg);
+      }
+    }
     &__nav {
-      display: none;
+      position: fixed;
+      z-index: 100;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      overflow: hidden;
+      justify-content: flex-end;
+      transform: translateY(-100%);
+      transition: all 0s ease-in-out 0.3s;
+    }
+    &__background {
+      width: 100%;
+      background-color: rgba(15, 7, 42, 0.3);
+      opacity: 0;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+    }
+    &__list {
+      position: absolute;
+      z-index: 101;
+      width: 100%;
+      max-width: 320px;
+      min-width: 320px;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      padding: 80px 0 20px;
+      flex-direction: column;
+      justify-content: flex-start;
+      overflow-y: auto;
+      transform: translateX(100%);
+      transition: all 0.3s ease-in-out;
+    }
+    &__item {
+      height: auto;
+    }
+    &__checkbox:checked ~ &__nav {
+      transform: translateY(0);
+      transition: all 0s ease-in-out;
+    }
+    &__checkbox:checked ~ &__nav &__background {
+      opacity: 1;
+    }
+    &__checkbox:checked ~ &__nav &__list {
+      transform: translateX(0);
+    }
+    &__checkbox:checked ~ &__nav &__button {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    &__link {
+      width: 100%;
     }
   }
 }
