--- a/frontend/src/components/Attachment/Attachment.scss
+++ b/frontend/src/components/Attachment/Attachment.scss
@@ -1,30 +1,10 @@
 .attachment {
   background-color: #ebf5fb;
-  &__container {
-    padding-top: 77px - 15;
-    padding-bottom: 117px - 15;
-    position: relative;
-    &:before {
-      display: block;
-      position: absolute;
-      content: '';
-      top: -46px;
-      left: 50%;
-      right: 30px;
-      bottom: 0;
-      transform: translateX(15px);
-      background-image: url(../../assets/img/attachment.png);
-      background-repeat: no-repeat;
-      background-position: bottom right;
-      background-size: contain;
-    }
-  }
   &__caption {
     padding: 15px 15px 16px;
   }
   &__text {
-    font-size: 1.5rem;
-    padding: 0 15px 72px - 15;
+    padding: 0 15px;
   }
   &__get-box {
     display: flex;
@@ -57,6 +37,34 @@
       &:before {
         background-image: url(../../assets/img/app.png);
       }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .attachment {
+    &__container {
+      padding-top: 77px - 15;
+      padding-bottom: 117px - 15;
+      position: relative;
+      &:before {
+        display: block;
+        position: absolute;
+        content: '';
+        top: -46px;
+        left: 50%;
+        right: 30px;
+        bottom: 0;
+        transform: translateX(15px);
+        background-image: url(../../assets/img/attachment.png);
+        background-repeat: no-repeat;
+        background-position: bottom right;
+        background-size: contain;
+      }
+    }
+    &__text {
+      font-size: 1.5rem;
+      padding: 0 15px 72px - 15;
     }
   }
 }
