--- a/app/src/main/res/layout/fragment_card_of_apartment.xml
+++ b/app/src/main/res/layout/fragment_card_of_apartment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.CardOfApartmentFragment">
+    tools:context=".ui.fragments.cardOfApartmentFragment.CardOfApartmentFragment">
 
 
     <androidx.viewpager2.widget.ViewPager2
@@ -13,7 +13,18 @@
         android:layout_height="281dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+    </androidx.viewpager2.widget.ViewPager2>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:tabBackground="@drawable/tab_selector"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp" />
 
     <TextView
         android:id="@+id/textApartmentValue"
