--- a/frontend/src/assets/_media.scss
+++ b/frontend/src/assets/_media.scss
@@ -11,7 +11,15 @@
 */
 
 @media (min-width: 768px) {
-
+  h1 {
+    font-size: 2rem;
+  }
+  h2, .body1 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.25rem;
+  }
 }
 
 /*
@@ -27,7 +35,7 @@
 */
 
 @media (min-width: 992px) {
-  
+
 }
 
 /*
@@ -38,8 +46,11 @@
   h1 {
     font-size: 2.625rem;
   }
-  h2, h3 {
+  h2, .body1 {
     font-size: 2rem;
+  }
+  h3 {
+    font-size: 1.5rem;
   }
 }
 
