--- a/frontend/src/components/Cost/Cost.scss
+++ b/frontend/src/components/Cost/Cost.scss
@@ -6,6 +6,7 @@
     padding: 15px + 16 15px 15px + 16 84px + 15;
     font-size: 1.5rem;
     color: #8cc3e2;
+    white-space: nowrap;
     background-repeat: no-repeat;
     background-position: center left 15px;
     background-size: 60px auto;
