--- a/frontend/src/components/TopMenu/TopMenu.scss
+++ b/frontend/src/components/TopMenu/TopMenu.scss
@@ -59,14 +59,20 @@
     &._bell {
       background-image: url(../../assets/svg/bell.svg);
     }
-    &._offers {
-      min-width: 44px;
-      min-height: 44px;
-      margin-left: 15px;
+    &._edit {
+      background-color: $b-text-color;
+      background-image: url(../../assets/svg/edit.svg);
     }
-    &:hover,
-    &:active,
-    &:focus {
+    &._delete {
+      background-color: $p-active-color;
+      background-image: url(../../assets/svg/delete.svg);
+    }
+    &._small {
+      min-width: 36px;
+      min-height: 36px;
+      background-size: auto 18px;
+    }
+    &:hover {
       box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
     }
   }
@@ -96,6 +102,7 @@
     position: relative;
     min-height: 69px;
     padding: 10px 16px;
+    font-size: 1.125rem;
     align-items: center;
     box-sizing: border-box;
     &:after {
@@ -129,10 +136,6 @@
   .top-menu {
     &__space {
       flex-grow: 1;
-    }
-    &__link {
-      min-height: auto;
-      font-size: 0.875rem;
     }
     &__button {
       display: block;
@@ -250,6 +253,8 @@
     }
     &__link {
       width: 100%;
+      min-height: auto;
+      font-size: 1rem;
       text-align: center;
       justify-content: center;
       &:after {
